# IRMA

./: .gitignore  Dockerfile  Jenkinsfile  README.md  irma-dev-robo.yaml  irma-dev.yaml  irma-prod-yefan.yaml  irma-prod.yaml  irma.yaml  start-dev.sh  start.sh
gzweb-node/shells/ar601_description/: CMakeLists.txt  README.md  package.xml
gzweb-node/shells/ar601_description/documents/: robot Info.ods  robot Info.xlsx  urdf_original.URDF
gzweb-node/shells/ar601_description/gazebo/: gazebo.urdf.xacro
gzweb-node/shells/ar601_description/meshes/: Belly.STL  Head1.STL  Head2.STL  LAnkle.STL  LArm.STL  LElbow.STL  LFinger1_1.STL  LFinger1_2.STL  LFinger2_1.STL  LFinger2_2.STL  LFinger2_3.STL  LFinger3_1.STL  LFinger3_2.STL  LFinger3_3.STL  LFinger4_1.STL  LFinger4_2.STL  LFinger4_3.STL  LFinger5_1.STL  LFinger5_2.STL  LFoot.STL  LHip.STL  LPelvis.STL  LShoulder1.STL  LShoulder2.STL  LShoulder3.STL  LThigh.STL  LTibia.STL  LWrist1.STL  LWrist2.STL  Neck1.STL  Neck2.STL  RAnkle.STL  RArm.STL  RElbow.STL  RFinger1_1.STL  RFinger1_2.STL  RFinger2_1.STL  RFinger2_2.STL  RFinger2_3.STL  RFinger3_1.STL  (+18 more)
gzweb-node/shells/ar601_description/robots/: ar601_arms.urdf.xacro  ar601_legs.urdf.xacro
gzweb-node/shells/ar601_description/urdf/: ar601_mesh_collision_geoms.urdf.xacro  ar601_original_inertia.urdf.xacro  ar601_primitive_collision_geoms.urdf.xacro  ar601_primitive_inertia.urdf.xacro  common.xacro  helper_macros.urdf.xacro
gzweb-node/shells/ar601_description/urdf/arm/: ar601_arm.urdf.xacro  ar601_arm_fixed.urdf.xacro  ar601_arm_fixed2.urdf.xacro  ar601_wrist.urdf.xacro  (+11 more)
(+79 files in other folders)
