<?xml version="1.0"?>
<package>
  <name>ar601_description</name>
  <version>0.0.0</version>
  <description>The ar601 description package</description>
  
  <maintainer email="ramil@todo.todo">ramil</maintainer>
  <license>Commercial</license>
  <buildtool_depend>catkin</buildtool_depend>


</package>



